# tapiza.online

./: README.md  app.js  index.html  styles.css
.github/workflows/: deploy-pages.yml  pages.yml
job/: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
job/docs/: ROADMAP.md
job/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
job/src/app/actions/: auth.ts  jobs.ts  profiles.ts
job/src/app/auth/login/: page.tsx
job/src/app/auth/register/: page.tsx
job/src/app/chats/[id]/: page.tsx
job/src/app/offers/: page.tsx
job/src/app/offers/[id]/: page.tsx
job/src/app/offers/[id]/edit/: page.tsx
job/src/app/offers/new/: page.tsx
job/src/app/panel/: page.tsx
job/src/components/: application-status-form.tsx  apply-button.tsx  bottom-nav.tsx  chat-room.tsx  company-profile-form.tsx  flash-message.tsx  job-form.tsx  top-bar.tsx  worker-profile-form.tsx
job/src/job/: __init__.py  main.py  quote.py
job/src/lib/: auth.ts  constants.ts  env.ts  utils.ts
job/src/lib/domain/: mvp.test.ts  mvp.ts
job/src/lib/supabase/: client.ts  middleware.ts  server.ts
job/src/lib/validation/: files.ts  schemas.ts
job/src/types/: database.ts
job/supabase/: schema.sql  seed.sql
job/tests/: test_quote.py  test_smoke.py
tapiza/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
tapiza/scripts/: generate_furniture_cutouts.py  generate_share_html.mjs
tapiza/server/: index.js  planCatalog.js
(+9 files in other folders)
