[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job"
version = "0.1.0"
description = "Base inicial del proyecto job"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "job team" }]
license = { text = "MIT" }

[project.scripts]
job = "job.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
