[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapiza-online"
version = "0.1.0"
description = "MVP inicial de cotizador para tapiza.online"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tapiza.online team" }]
license = { text = "MIT" }

[project.scripts]
tapiza = "job.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
